<resources>
    <string name="app_name">test</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="ac_id_01_name">我为你唱首歌</string>
    <string name="ac_id_01_date" >2017年6月9日</string>
    <string name="ac_id_01_starttime">18:00</string>
    <string name="ac_id_01_endtime">19:00</string>
    <string name="ac_id_01_locate">逸夫楼306</string>
</resources>
