<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:weightSum="1">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="108dp"
        android:layout_margin="8dp"
        android:layout_weight="0.09">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/ac_id_01"
            app:srcCompat="@drawable/ticked" />

        <TextView
            android:id="@+id/action_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="165dp"
            android:layout_marginTop="8dp"
            android:text="@string/ac_id_01_name"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/action_locate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="210dp"
            android:layout_marginTop="64dp"
            android:text="到"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="228dp"
            android:layout_marginTop="64dp"
            android:text="@string/ac_id_01_endtime"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="165dp"
            android:layout_marginTop="90dp"
            android:text="@string/ac_id_01_date"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="165dp"
            android:layout_marginTop="64dp"
            android:text="@string/ac_id_01_starttime"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="165dp"
            android:layout_marginTop="36dp"
            android:text="@string/ac_id_01_locate"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="110dp"
            android:layout_marginTop="90dp"
            android:elevation="1dp"
            android:text="日期："
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="110dp"
            android:layout_marginTop="64dp"
            android:elevation="1dp"
            android:text="时间："
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="110dp"
            android:layout_marginTop="36dp"
            android:text="地点："
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="110dp"
            android:layout_marginTop="8dp"
            android:text="名称："
            android:textSize="18sp" />
    </android.support.v7.widget.CardView>

</LinearLayout>